--- a/apply.html
+++ b/apply.html
@@ -26,7 +26,7 @@
         <nav id="mobile-nav" aria-label="mobile navigation">
             <bento-sidebar id="sidebar1" side="right" hidden>
                 <ul class="bento">
-                  <li><a href="index.html">About</a></li>
+                  <li><a href="index.html">Home</a></li>
                   <li><a href="index.html#benefits">Benefits</a></li>
                   <li><a href="index.html#credit_cards">Credit Cards</a></li>
                   <li><a href="apply.html">Apply Now</a></li>
@@ -45,7 +45,7 @@
             <a href="index.html" class="logo2" aria-label="logo">LOGO</a>
             <nav id="desktop-nav" aria-label="desktop navigation">
                 <ul class="nav-links" aria-label="navigation links">
-                    <li><a href="index.html">About</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#benefits">Benefits</a></li>
                     <li><a href="index.html#credit_cards">Credit Cards</a></li>
                     <li><a href="apply.html">Apply Now</a></li>
@@ -99,7 +99,7 @@
                 <article class="footer-column">
                     <h3 class="footer-title">Permalinks</h3>
                     <ul>
-                        <li><a href="index.html#about">About</a></li>
+                        <li><a href="index.html">Home</a></li>
                        <li><a href="index.html#benefits">Benefits</a></li>
                        <li><a href="index.html#credit_cards">Credit Cards</a></li>
                        <li><a href="apply.html">Apply Now</a></li>
