--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         <nav id="mobile-nav" aria-label="mobile navigation">
             <bento-sidebar id="sidebar1" side="right" hidden>
                 <ul class="bento">
-                  <li><a href="index.html">About</a></li>
+                  <li><a href="index.html">Home</a></li>
                   <li><a href="index.html#benefits">Benefits</a></li>
                   <li><a href="index.html#credit_cards">Credit Cards</a></li>
                   <li><a href="apply.html">Apply Now</a></li>
@@ -45,7 +45,7 @@
             <a href="index.html" class="logo2" aria-label="logo">LOGO</a>
             <nav id="desktop-nav" aria-label="desktop navigation">
                 <ul class="nav-links" aria-label="navigation links">
-                    <li><a href="index.html">About</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#benefits">Benefits</a></li>
                     <li><a href="index.html#credit_cards">Credit Cards</a></li>
                     <li><a href="apply.html">Apply Now</a></li>
@@ -57,7 +57,6 @@
         </header>
         <!--END OF HEADER-->
         <section id="contact" class="contact" aria-label="contact">
-            <h2>Contact</h2>
             <div class="container">
                 <form action="contact-form" aria-label="contact-form" >
                     <fieldset>
@@ -113,7 +112,7 @@
                 <article class="footer-column">
                     <h3 class="footer-title">Permalinks</h3>
                     <ul>
-                        <li><a href="index.html#about">About</a></li>
+                        <li><a href="index.html">Home</a></li>
                        <li><a href="index.html#benefits">Benefits</a></li>
                        <li><a href="index.html#credit_cards">Credit Cards</a></li>
                        <li><a href="apply.html">Apply Now</a></li>
