--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav id="mobile-nav" aria-label="mobile navigation">
             <bento-sidebar id="sidebar1" side="right" hidden>
                 <ul class="bento">
-                  <li><a href="#about">About</a></li>
+                  <li><a href="#">Home</a></li>
                   <li><a href="#benefits">Benefits</a></li>
                   <li><a href="#credit_cards">Credit Cards</a></li>
                   <li><a href="apply.html">Apply Now</a></li>
@@ -45,7 +45,7 @@
             <a href="#about" class="logo2" aria-label="logo">LOGO</a>
             <nav id="desktop-nav" aria-label="desktop navigation">
                 <ul class="nav-links" aria-label="navigation links">
-                    <li><a href="#about">About</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="#benefits">Benefits</a></li>
                     <li><a href="#credit_cards">Credit Cards</a></li>
                     <li><a href="apply.html">Apply Now</a></li>
@@ -191,7 +191,7 @@
                 <article class="footer-column">
                     <h3 class="footer-title">Permalinks</h3>
                     <ul>
-                        <li><a href="#about">About</a></li>
+                        <li><a href="#">Home</a></li>
                        <li><a href="#benefits">Benefits</a></li>
                        <li><a href="#credit_cards">Credit Cards</a></li>
                        <li><a href="apply.html">Apply Now</a></li>
