--- a/apply.html
+++ b/apply.html
@@ -61,15 +61,15 @@
             <form action="application form" method="post">
                 <fieldset>
                     <legend>Please fill out this form with the required information</legend>
-                    <label for="first-name">Enter Your First Name: <input id="first-name" name="first-name" type="text" required></label>
-                    <label for="last-name">Enter Your Last Name: <input id="last-name" name="last-name" type="text" required></label>
-                    <label for="email">Enter Your Email: <input id="personal-email" name="email" type="email" required></label>
+                    <label for="first-name">Enter Your First Name: <input id="first-name" name="first-name" type="text" required autocomplete="cc-given-name"></label>
+                    <label for="last-name">Enter Your Last Name: <input id="last-name" name="last-name" type="text" required autocomplete="cc-family-name"></label>
+                    <label for="personal-email">Enter Your Email: <input id="personal-email" name="email" type="email" required autocomplete="email"></label>
                     <label for="age">Enter Your Age (years): <input id="age" type="number" name="age" min="18" max="100"></label>
                     <label for="dob">Enter Your Date Of Birth: <input id="dob" type="date" name="dob"></label>
-                    <label for="phone">Enter Your Phone Number: <input id="phone" type="tel" name="phone"></label>
-                    <label for="address">Enter Your Home Address <input type="text" name="address" id="address"></label>
+                    <label for="phone">Enter Your Phone Number: <input id="phone" type="tel" name="phone" autocomplete="mobile"></label>
+                    <label for="address">Enter Your Home Address <input type="text" name="address" id="address" autocomplete="address-level1"></label>
                     <label for="income-label" aria-label="income">Source Of Income 
-                        <select class="drop_down_menu">
+                        <select class="drop_down_menu" id="income-label">
                             <option value="">(select one)</option>
                             <option value="1">Employed</option>
                             <option value="2">Retired</option>
@@ -90,7 +90,7 @@
                         </label>
                     </legend>
                 </fieldset>
-                <label for="submit-label" class="label5"><input type="submit" value="submit"></label>
+                <label for="submit-label" class="label5"><input type="submit" id="submit-label" value="submit"></label>
             </form>
         </article>
         <!--END OF APPLICATION FORM-->
@@ -130,9 +130,9 @@
                     <h3 class="footer-title">Stay Informed</h3>
                     <p>Subscribe to our mailing list.</p>
                     <form action="newsletter" aria-label="signup">
-                        <label for="email" class="label"><input id=" current email" type="email" name="email" placeholder="Enter Email"
-                        required="valid email" aria-label="enter your email"></label>
-                        <label for="submit button"><input type="submit" value="Subscribe"></label>
+                        <label for="current-email" class="label"><input id="current-email" type="email" name="email" placeholder="Enter Email"
+                        required="valid email" aria-label="enter your email" autocomplete="email"></label>
+                        <label for="submit_button"><input type="submit" id="submit_button" value="Subscribe"></label>
                     </form>
                 </article>
             </section>
