--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <article class="about-article">
                     <h1>Credit Card Provider</h1>
                     <p class="intro">We are one of the fastest growing credit card companies, in America.</p>
-                    <p class="about-p"><a href="apply.html" class="btn-primary">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a></p>
+                    <p class="about-p"><a href="apply.html" class="btn-primary">apply now <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a></p>
                 </article>
             </div>
         </section>
