edit: hero section
change hero picture, colors & format code.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,18 @@
             <div class="container">
                 <article class="about-article">
                     <h1>Credit Card Provider</h1>
-                    <p class="intro">We are one of the fastest growing credit card companies, in America.</p>
-                    <p class="about-p"><a href="apply.html" class="btn-primary">apply now <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a></p>
+                    <p>We are one of the fastest growing credit card companies, in America. 
+                        Check if you're pre-approved for card offers, with no impact to your credit score.
+                    </p>
+                    <p><a href="apply.html" class="btn">apply now <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a></p>
                 </article>
+                <picture class="about-picture">
+                    <source media="(max-width: 500px)" srcset="/imgs/5360846_Credit-card500w.avif" type="image/avif">
+                    <source media="(max-width: 500px)" srcset="/imgs/5360846_Credit-card500w.webp" type="image/webp">
+                    <source media="(min-width: 500px)" srcset="/imgs/5360846_Credit-card.avif" type="image/avif">
+                    <source media="(min-width: 500px)" srcset="/imgs/5360846_Credit-card.webp" type="image/webp">
+                    <img src="/imgs/5360846_Credit-card.jpg" width="1000" height="1000" alt="credit card illustration">
+                </picture>
             </div>
         </section>
         <section id="benefits" aria-label="benefits">
@@ -109,7 +118,7 @@
                         <p>This credit card is for well established clients and offers unlimited credit.</p>
                     </article>
                     <figcaption>
-                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
                     </figcaption>
                 </figure>
                 <!--END OF FIRST CREDIT CARD-->
@@ -123,7 +132,7 @@
                         <p>Every penny counts and with this card, each eligible purchase receives 5% cash back.</p>
                     </article>
                     <figcaption>
-                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
                     </figcaption>
                 </figure>
                 <!--END OF SECOND CREDIT CARD-->
@@ -137,7 +146,7 @@
                         <p>This is a credit card, that is open to students and anyone who wants to establish credit.</p>
                     </article>
                     <figcaption>
-                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
                     </figcaption> 
                 </figure>
                 <!--END OF THIRD CREDIT CARD-->
@@ -151,7 +160,7 @@
                         <p>This credit card is meant for businesses, both small and large. Excellent rates are available.</p>
                     </article>
                     <figcaption>
-                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
                     </figcaption> 
                 </figure>
                 <!--END OF FOURTH CREDIT CARD-->
@@ -165,7 +174,7 @@
                         <p>This card is used as a digital wallet, to store your crypto currencies, in a secure way.</p>
                     </article>
                     <figcaption>
-                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
                     </figcaption> 
                 </figure>
                 <!--END OF FIFTH CREDIT CARD-->
@@ -179,7 +188,7 @@
                         <p>This credit card applies points, with every eligible purchase, at participating stores. </p>
                     </article>
                     <figcaption>
-                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
                     </figcaption> 
                 </figure>
                 <!--END OF FINAL CREDIT CARD-->
@@ -203,7 +212,7 @@
                 <article class="footer-column">
                     <h3 class="footer-title">Photo Credit</h3>
                     <ul>
-                        <li><a href="https://www.pexels.com/photo/black-smartphone-on-green-table-6214382/">Nataliya Vaitkevich</a></li>
+                        <li><a href="https://www.freepik.com/free-vector/credit-card-concept-illustration_5360846.htm#query=credit%20card&position=13&from_view=author">Image by storyset</a> on Freepik</li>
                         <li><a href="https://www.pexels.com/photo/black-card-on-top-of-white-envelope-7821482/">RODNAE productions</a></li>
                         <li><a href="https://www.pexels.com/photo/close-up-of-coins-on-table-332304/">Skitterphoto</a></li>
                         <li><a href="https://unsplash.com/photos/DJoG5GsXfMw">Marcus Winkler</a></li>
