--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                     <p><a href="apply.html" class="btn">apply now <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a></p>
                 </article>
                 <picture class="about-picture">
-                    <source media="(max-width: 500px)" srcset="/imgs/5360846_Credit-card500w.avif" type="image/avif">
-                    <source media="(max-width: 500px)" srcset="/imgs/5360846_Credit-card500w.webp" type="image/webp">
-                    <source media="(min-width: 500px)" srcset="/imgs/5360846_Credit-card.avif" type="image/avif">
-                    <source media="(min-width: 500px)" srcset="/imgs/5360846_Credit-card.webp" type="image/webp">
-                    <img src="/imgs/5360846_Credit-card.jpg" width="1000" height="1000" alt="credit card illustration">
+                    <source media="(max-width: 500px)" srcset="./imgs/5360846_Credit-card500w.avif" type="image/avif">
+                    <source media="(max-width: 500px)" srcset="./imgs/5360846_Credit-card500w.webp" type="image/webp">
+                    <source media="(min-width: 500px)" srcset="./imgs/5360846_Credit-card.avif" type="image/avif">
+                    <source media="(min-width: 500px)" srcset="./imgs/5360846_Credit-card.webp" type="image/webp">
+                    <img src="./imgs/5360846_Credit-card.jpg" width="1000" height="1000" alt="credit card illustration">
                 </picture>
             </div>
         </section>
